# IEP

./: .deepsource.toml  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
.devcontainer/: devcontainer.json
backend/: main.py  pyproject.toml  ruff.toml
backend/application/: app_config.py  app_factory.py  auth_service.py  course_DTO.py  course_service.py  file_service.py  user_service.py
backend/domain/: course.py  file.py  user.py
backend/infrastructure/: config.py  minio.py  mongodb.py
backend/interface/: auth_router.py  course_router.py  file_router.py  user_router.py
frontend/: dprint.json  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/public/: silent-renew.html
frontend/src/: App.vue  main.js  style.css
frontend/src/Layout/: default.vue
frontend/src/components/: CourseOutline.vue  HeroSection.vue
frontend/src/components/Nav/: Navigation.vue
frontend/src/plugins/: keycloak.js
frontend/src/router/: index.js
frontend/src/services/: auth.js
frontend/src/stores/: auth.js  course.js  courseType.js  createCourse.js  user.js
frontend/src/views/: BackendCallbackHandler.vue  Callback.vue  Class.vue  CreateCourse.vue  Home.vue  MyCourse.vue  Profile.vue  SelectCourse.vue  Teacher.vue
src/: App.vue
src/components/: HeroSection.vue
src/components/Feature/: FeaturesCard.vue  FeaturesCardList.vue
src/components/HotCourse/: HotCourse.vue  HotCourseLayout.vue
src/components/Nav/: Navigation.vue
src/router/: index.js
src/views/: Home.vue  MyCourse.vue
(+26 files in other folders)
