[project]
name = "iep-backend"
version = "0.1.0"
description = "IEP Backend Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "motor>=3.7.0",
    "odmantic>=1.0.2",
    "pydantic>=2.11.3",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
